<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="10dip" >

    <EditText
        android:id="@+id/mail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail_content_hint"
        android:minLines="3"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_contact_way"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/mail_contact_way"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"            
            android:hint="@string/mail_contact_way_hint"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@drawable/submit_btn"
        android:gravity="center"
        android:textColor="#ffffff"
        android:text="@string/submit" />

</LinearLayout>