<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff" >

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="10dip"
                android:maxWidth="250dip"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/detail_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_title"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="15dip"
                android:layout_marginTop="5dip"
                android:textColor="#f00"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detail_author"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_date"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dip"
                android:textColor="#000"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_below="@id/detail_author"
                android:background="@drawable/divider" />

            <LinearLayout
                android:id="@+id/tmp_news_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_author"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/detail_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="15dip"
                    android:layout_marginTop="5dip"
                    android:contentDescription="@string/loading" />

                <TextView
                    android:id="@+id/detail_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="15dip"
                    android:layout_marginTop="5dip"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/spread_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tmp_news_content"
                android:layout_marginTop="15dip"
                android:paddingBottom="15dip"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:background="#0000ff"
                    android:textColor="#fff"
                    android:padding="3dip"
                    android:text="@string/spread"/>

                <TextView
                    android:id="@+id/spread_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:textColor="#00f"
                    android:textSize="18sp"
                    android:text="@string/spread_string" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/detail_loading_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#fff" >

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detail_loading"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</FrameLayout>